# BPI_ROVER_Reunion-Django

./: .gitignore  DYNAMIC_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NEW_APPS_DOCUMENTATION.md  QUICK_REFERENCE.md  README_APPS.md  SCHEDULE_ADMIN_GUIDE.md  SCHEDULE_COMPLETE_SUMMARY.md  SCHEDULE_DYNAMIC_IMPLEMENTATION.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
bpi_rover_reunion/: asgi.py  settings.py  urls.py  wsgi.py
core/: views.py
faq/: admin.py  apps.py  models.py
faq/management/commands/: populate_faq.py
faq/migrations/: 0001_initial.py
food_menu/: admin.py  apps.py  models.py
food_menu/management/commands/: populate_food_menu.py
food_menu/migrations/: 0001_initial.py
registration/: admin.py  models.py  urls.py  views.py
registration/migrations/: 0001_initial.py
schedule/: admin.py  apps.py  models.py
schedule/management/commands/: populate_schedule.py
schedule/migrations/: 0001_initial.py  0002_alter_scheduleitem_icon_class.py
static/css/: style.css  tailwind.css
templates/: base.html  home.html  home_old_backup.html  register_page.html
templates/include/: footer.html
templates/registration/: landing_page.html  landing_page_new.html
templates/registration/partials/: step1_form.html  step2_payment.html  step3_success.html
terms/: admin.py  apps.py  models.py
terms/management/commands/: populate_terms.py
terms/migrations/: 0001_initial.py
